Fixed App refreshing bug
- Adding reports via the sidebar properly refreshes the map pins and sidebar UI list
- Fixed sidebar UI list overflow and vertical scrollbar positioning

--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -1,4 +1,5 @@
 .sidebar-component {
+    padding: 10px;
     color: black;
     background-color:rgb(226, 232, 240);
     border: 5px solid rgb(100 116 139);
@@ -29,6 +30,8 @@
 }
 
 .sidebar-component ul {
+    height: 80vh;
+    padding-right: 10px;
     margin: 10px;
     overflow-y: scroll;
     overflow-x: hidden;
